# inrs

./: Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug.md  config.yml
.github/config/: release-changelog-builder-action.json
.github/workflows/: assets.yml  ci.yml  release.yml
src/: main.rs
src/cli/: mod.rs  parser.rs  validator.rs
src/cli/sub_commands/: create.rs  delete.rs  errors.rs  list.rs  mod.rs  update.rs  utils.rs
src/cli/sub_commands/tests/: create.rs  delete.rs  mod.rs  update.rs  utils.rs
